# Forge-AI

./: .env.example  .gitignore  .pre-commit-config.yaml  CODEX_BACKLOG.md  CODEX_INSTRUCTIONS.md  CONTRIBUTING.md  FILE_INDEX.md  IMPLEMENTATION_COMPLETE.md  README.md  ROUTER_IMPLEMENTATION_SUMMARY.md  ROUTER_SETUP.md  SECURITY.md  SOURCE_MAP.md  THREAT_MODEL.md  UPLOAD_GUIDE.md  package-lock.json  package.json  remove_scheduler.ps1  setup_scheduler.ps1  start_agent.bat
implementation/backend/: Dockerfile  README.md  pyproject.toml  requirements-core.txt  requirements-optional.txt  requirements.txt
implementation/backend/forge/: acl_mcp_ai_agent.json  config.py  main.py  pentest_server.py  router_server.py  tool_server.py
implementation/backend/forge/agent/: chat_template_engine.py  graph.py  operator_mode.py  template_loader.py
implementation/backend/forge/api/: routes.py
implementation/backend/forge/core/: config.py  database.py  models.py  security.py
implementation/backend/forge/mcp_servers/: __init__.py  apps_server.py  base.py  browser_server.py  filesystem_server.py  memory_server.py  rag_server.py  screen_server.py  start_all_servers.py  terminal_server.py  thinking_server.py  web_server.py
implementation/backend/forge/modules/: __init__.py  loader.py  runner.py
implementation/backend/forge/rag/: chunker.py  chunking.py  embedder.py  indexer.py  ingestion.py  paths.py  reranker.py  retriever.py  (+2 more)
implementation/backend/tests/: test_app.py  test_rag_chunking.py  test_rag_ingestion.py  test_rag_paths.py  test_router_server.py  test_services_core.py
(+92 files in other folders)
