[tool.poetry]
name = "forge-backend"
version = "0.1.0"
description = "Forge: self-hosted personal AI agent backend"
authors = ["Forge <forge@localhost>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "forge", from = "." }]

[tool.poetry.scripts]
forge = "forge.main:run"

[tool.poetry.dependencies]
python = "^3.12"

# Web framework
fastapi = "^0.115"
uvicorn = { version = "^0.34", extras = ["standard"] }
pydantic = "^2.10"
pydantic-settings = "^2.7"

# HTTP client (async)
httpx = "^0.28"

# Database
sqlalchemy = {version = "^2.0", extras = ["asyncio"]}
aiosqlite = "^0.20"
alembic = "^1.14"

# RAG / vector store
lancedb = "^0.17"

# Templating (module prompts)
jinja2 = "^3.1"

# YAML parsing
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
httpx = "^0.28"      # for TestClient

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
ignore_errors = true
